// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transition Transition appear demo works fine 1`] = `
<appear>
  <t-button
    block="{{true}}"
    size="large"
    theme="primary"
    variant="outline"
    bind:tap="onTriggerClick"
  >
    Toggle attach
  </t-button>
</appear>
`;

exports[`Transition Transition base demo works fine 1`] = `
<base>
  <t-button
    block="{{true}}"
    size="large"
    theme="primary"
    variant="outline"
    bind:tap="onTriggerClick"
  >
    Toggle
  </t-button>
  <t-transition
    customStyle="font-size: 9px"
    style="display:none"
    visible="{{false}}"
  >
    <wx-view
      class="block"
    />
  </t-transition>
</base>
`;

exports[`Transition Transition custom demo works fine 1`] = `
<custom>
  <t-button
    block="{{true}}"
    size="large"
    theme="primary"
    variant="outline"
    bind:tap="onTriggerClick"
  >
    Toggle
  </t-button>
  <t-transition
    name="translate"
    visible="{{false}}"
  >
    <wx-view
      class="block"
    />
  </t-transition>
</custom>
`;

exports[`Transition Transition destroy demo works fine 1`] = `
<destroy>
  <t-button
    block="{{true}}"
    size="large"
    theme="primary"
    variant="outline"
    bind:tap="onTriggerClick"
  >
    Toggle attach
  </t-button>
  <t-transition
    destroyOnHide="{{true}}"
    visible="{{false}}"
  >
    <wx-view
      class="block"
    />
  </t-transition>
</destroy>
`;
